--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = FlowNet
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
-# copyright = Put your copyright information here
-branch = {branch}
+user = professorwug
+description = Directed Graph Embeddings with Flow
+keywords = embeddings graphs
+author = SUMRY ML Group 2022
+author_email = dev@riddle.press
+copyright = MU
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-# requirements = 
+requirements = numpy torch matplotlib plotly scvelo tqdm scipy scikit-learn networkx pillow 
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
@@ -44,7 +44,7 @@ doc_path = docs
 recursive = False
 
 # Anything shown as '%(...)s' is substituted with that setting automatically
-doc_host =  https://%(user)s.github.io
+doc_host =  https://x.riddle.press
 #For Enterprise Git pages use:  
 #doc_host = https://pages.github.%(company_name)s.com.  
 
