--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = FlowNet
+lib_name = FRED
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
