--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -16,7 +16,7 @@ entries:
       title: 01 Datasets
       url: 01 Datasets.html
     - output: web,pdf
-      title: Graph Toy Datasets
+      title: 01a01 Graph Toy Datasets
       url: 01a01 Graph Toy Datasets.html
     - output: web,pdf
       title: 01a01a Stanford Large Network Datasets with Ground-truth Communities
@@ -55,13 +55,13 @@ entries:
       title: 02 Data Preprocessing
       url: 02 Data Preprocessing.html
     - output: web,pdf
-      title: The Flashlight Kernel
+      title: 02a The Flashlight Kernel
       url: 02a Flashlight Kernel.html
     - output: web,pdf
       title: 02b Diffusion Maps and Distances
       url: 02b Diffusion Maps and Distances.html
     - output: web,pdf
-      title: Flow Neighborhoods
+      title: 02c Flow Neighborhoods
       url: 02c Flow Neighborhoods.html
     - output: web,pdf
       title: 02d Flow Datasets
