Replaced all occurences of FlowNet with FRED
Signed-off-by: Professor Wug <dev@riddle.press>

--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -10,7 +10,7 @@ entries:
       title: Overview
       url: /
     - output: web,pdf
-      title: FlowNet
+      title: FRED
       url: 00 Core.html
     - output: web,pdf
       title: 01 Datasets
