--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = numpy torch matplotlib plotly scvelo tqdm scipy scikit-learn networkx pillow 
+requirements = numpy torch matplotlib plotly tqdm scipy scikit-learn networkx pillow 
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
